Versão com layout atualizado.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <nav class="navbar"></nav>
     <main>
       <div class="grid-container sticky">
-        <div class="grid-item-header">Grupos</div>
+        <div class="grid-item-header">GRUPOS</div>
         <div class="grid-item-header">A</div>
         <div class="grid-item-header">B</div>
         <div class="grid-item-header">C</div>
         <div class="grid-item-header">D</div>
         <div class="grid-item-header">E</div>
       </div>
-      <div class="grid-container">
+      <div class="grid-container content">
         <div class="grid-item">01/01/2023</div>
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
