--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <main>
       <div class="grid-container sticky">
         <div class="grid-item-header">GRUPOS</div>
-        <div class="grid-item-header">A</div>
-        <div class="grid-item-header">B</div>
-        <div class="grid-item-header">C</div>
-        <div class="grid-item-header">D</div>
-        <div class="grid-item-header">E</div>
+        <div class="grid-item-header">A / 5</div>
+        <div class="grid-item-header">B / 4</div>
+        <div class="grid-item-header">C / 1</div>
+        <div class="grid-item-header">D / 2</div>
+        <div class="grid-item-header">E / 3</div>
       </div>
-      <div class="grid-container content">
+      <div class="content"></div>
+      <div class="grid-container">
         <div class="grid-item">01/01/2023</div>
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
