--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Escala de Turno</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="shortcut icon"
+      href="images/icons/favicon.ico"
+      type="images/x-icon"
+    />
+    <link rel="icon" href="images/icons/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap"
