--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
     <nav class="navbar"></nav>
     <main>
       <div class="grid-container sticky">
-        <div class="grid-item-header">GRUPOS</div>
-        <div class="grid-item-header">A / 5</div>
+        <div id="labelGrupos" class="grid-item-header">GRUPOS</div>
+        <div id="labelGrupoA" class="grid-item-header">A</div>
+        <div id="labelGrupoB" class="grid-item-header">B</div>
+        <div id="labelGrupoC" class="grid-item-header">C</div>
+        <div id="labelGrupoD" class="grid-item-header">D</div>
+        <div id="labelGrupoE" class="grid-item-header">E</div>
+        <!-- <div class="grid-item-header">A / 5</div>
         <div class="grid-item-header">B / 4</div>
         <div class="grid-item-header">C / 1</div>
         <div class="grid-item-header">D / 3</div>
-        <div class="grid-item-header">E / 2</div>
+        <div class="grid-item-header">E / 2</div> -->
       </div>
       <div class="content"></div>
     </main>
